Wed Apr 25 13:11:42 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * bin/dcps_tests.lst:

          Added a configuration NO_BUILT_IN_TOPICS that will identify builds
          that have BIT support disabled.  Once these tests are uncommented,
          they will be not be run on builds that have NO_BUILT_IN_TOPICS set as
          a configuration.

Wed Apr 25 00:38:56 UTC 2007  Trevor Fields  <fields_t@ociweb.com>

        * DCPS/transport/framework/TransportSendStrategy.cpp:

          Fixed bug of creation of incorrect queues when clear() was
          called.  The elems_ and queue_ were being given the wrong sized
          queues.

Tue Apr 25 00:15:33 UTC 2007 Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:

          Fixed a bug in built-in-topic datawriter that should resend
          data in sending and sent list instead of sending unsent list.

        * dds/DCPS/DomainParticipantImpl.cpp:

          Rolled back the work around.

Tue Apr 24 18:41:35 UTC 2007 Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/DomainParticipantImpl.cpp:

          Added 2 seconds delay after participant creates the built-in-topic
          datareaders. This is a work around for the problem of the
          built-in-topic data lost during fully association period. We need
          find a better solution to synchronize the bit data publishing and
          subscribering.

Thu Apr 19 20:22:30 UTC 2007 Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/PublisherImpl.cpp:

          Rolled back part of changes in last commit - moved
          the send() call inside the lock since it could cause
          deadlock situation when there are multiple datawriters with
          multiple writing threads in a process. The deadlock situation
          happens when first writing thread calls send_start(), second
          writing thread calls send_start(), first writing thread calls
          send_stop() which hold the lock in DataLinkSet and calls second