@@ -60,7 +60,13 @@ namespace TAO
       association_chunk_multiplier_(DEFAULT_CHUNK_MULTIPLIER),
       liveliness_factor_ (80),
       bit_transport_port_(DEFAULT_BIT_TRANSPORT_PORT),
-      bit_enabled_ (true),
+      bit_enabled_ (
+#ifdef DDS_HAS_MINIMUM_BIT
+                    false
+#else
+                    true
+#endif
+                    ),
       bit_lookup_duration_msec_ (BIT_LOOKUP_DURATION_MSEC)
     {
       initialize();
