@@ -1,3 +1,10 @@
+Wed Apr 25 17:49:12 UTC 2007  Adam Mitz  <mitza@ociweb.com>
+
+        * dds/DCPS/Service_Participant.cpp:
+
+          If DDS is compiled with built_in_topics=0 then default 'bit_enabled'
+          to false.
+
 Wed Apr 25 13:11:42 UTC 2007  Adam Mitz  <mitza@ociweb.com>
 
         * bin/dcps_tests.lst:
